client/src/components/Donation/donation.css
/* ... */
@media (max-width: 400px) {
  .donate-tabs > .nav-pills > li > a {
    font-size: 0.8rem;
    padding: 10px 5px;
  }
}

.donation-icon {
  height: 150px;
  width: auto;
}

.no-delay-fade-in {
  opacity: 0;
  pointer-events: none;
  animation: opacity-animation 1s linear 100ms forwards;
}

@keyframes opacity-animation {
  0% {
    pointer-events: none;
    opacity: 0;
  }
  100% {
    pointer-events: auto;
    opacity: 1;
  }
}

.donation-modal h2 {
  font-weight: 600 !important;
  font-size: 1.2rem;
}

.donation-modal b {
  width: 100%;
  display: inline-block;
}

.donation-modal p {
  font-size: 0.9rem;
}

.donation-modal ul {
  padding: 0;
}

.donation-modal li {
  list-style-type: none;
  margin-bottom: 4px;
}
.donation-modal li svg {
  margin: 0 5px;
}

.donation-label-modal {
  font-weight: normal;
  text-align: center;
}

.edit-amount-confirmation {
  margin: 0 auto;
  max-width: 350px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  & > * {
    flex: 0 0 max-content;
  }
}

/*
 * We currently cannot reuse the Button component from `ui-components`
 * and are using the native `<button>` with custom CSS.
 * This implementation is temporary until we can find a solution for this button use case.
 * Ref: https://github.com/freeCodeCamp/freeCodeCamp/issues/52349
 */
.close-button {
  text-align: center;
  margin: 0 auto;
  display: block;
  padding: 0 10px;
  font-weight: normal;
  background-color: transparent;
  border: 0;
  text-decoration-line: underline;
  /* This is required in order to improve text readability in Arabic */
  text-underline-position: under;
}
.close-button:hover {
  text-decoration-line: none;
  background-color: var(--quaternary-background);
  color: var(--quaternary-color);
}

@media (max-width: 500px) {
  h1 {
    font-size: 1.3rem;
  }
}

.donation-tier-selection [role='tablist'] button {
  background-color: transparent;
}
.donation-tier-selection
  [role='tablist']
  button:hover:not([data-state='active']) {
  background-color: var(--quaternary-background);
  color: var(--quaternary-color);
}

.donation-tier-selection [role='tablist'] button[data-state='active'] {
  background-color: var(--quaternary-color);
}

.donation-icon-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 30px;
}

.form-payments-wrapper {
  height: auto;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin-top: 15px;
}

.form-payment-methods {
  height: 20px;
  width: 200px;
}

.paypal-button {
  display: flex;
  align-items: center;
  justify-content: center;
}

.paypal-button svg {
  margin-top: 5px;
  height: 22px;
}

@media screen and (min-width: 355px) {
  .form-payment-methods {
    height: 30px;
    width: 300px;
  }
}

@media screen and (min-width: 991px) {
  .form-payments-wrapper {
    justify-content: flex-end;
    margin-top: 0;
    height: 39px;
  }
  .donation-icon-container {
    margin: 40px;
  }

  .donation-modal h2 {
    font-weight: 700 !important;
    font-size: 1.5rem;
  }
}
/* ... */

